// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SheetConteudo snapshot (dois temas): claro 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "paddingBottom": 50,
        "paddingHorizontal": 16,
        "paddingTop": 20,
      }
    }
    testID="sheet-conteudo"
  >
    <Text>
      conteúdo
    </Text>
  </View>
</RNCSafeAreaProvider>
`;

exports[`SheetConteudo snapshot (dois temas): escuro 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#0E0E10",
        "flex": 1,
        "paddingBottom": 50,
        "paddingHorizontal": 16,
        "paddingTop": 20,
      }
    }
    testID="sheet-conteudo"
  >
    <Text>
      conteúdo
    </Text>
  </View>
</RNCSafeAreaProvider>
`;
